@@ -10,6 +10,7 @@ core 2.1.2 - ???
 	* Change: Comment out unused database relation input field (relations have their own sub fields)
 	* Change: Cleanup adding the language file for jscalendar
 	* Add: Added doubleEncode parameter for TodoyuString::htmlentities
+	* Add: Translated log levels in core/locale/en_GB/global.xml
 	* Remove: Removed unused function TodoyuArray::convertToUTF8Array
 	* Update: JsCalendar library updated. Added some extra utf-8 language packages (provided by Captain_FLAM)
 
